--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "import/prefer-default-export": "off",
     "prettier/prettier": "error",
     "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
