--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "camunda-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8081",
   "dependencies": {
+    "@react-keycloak/web": "^2.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +14,7 @@
     "axios": "^0.20.0",
     "bpmn-js": "^7.3.0",
     "date-fns": "^2.15.0",
+    "keycloak-js": "10.0.2",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/keycloak-js": "^3.4.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
