--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "camunda-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "@react-keycloak/web": "^2.1.4",
     "@testing-library/jest-dom": "^4.2.4",
