--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
     "bpmn-js": "^7.3.0",
     "date-fns": "^2.15.0",
@@ -23,8 +25,10 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +52,9 @@
     "@types/axios": "^0.14.0",
     "@types/keycloak-js": "^3.4.1",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.19",
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "6.8.0",
