--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.19",
     "@types/styled-components": "^5.1.2",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
