--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "keycloak-js": "10.0.2",
     "polished": "^3.6.5",
     "react": "^16.13.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-icons": "^3.11.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/keycloak-js": "^3.4.1",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.19",
     "@types/styled-components": "^5.1.2",
